Changes that may break existing programs are marked using a star *.

Version 1.1.0
=============

Configuration:
- Replaced the configuration tool by a more powerful one using Totoconf.

Melt tool:
- -classic-display option

Preprocessor:
- \" in comments become " to stop the OCaml compiler from complaining about
a string litteral not terminated in a comment.
- $, " and { didn't work as verbatim delimiters and now a parse error is printed
- Errors are now printed as "Melt parse error" instead of just "Parse error"
- Underscores (_) are now accepted in verbatim function names

Latex library:
- Latex.Verbatim.pseudocode (and Melt.Verbatim.pseudocode)
- Bugfix: ~packages argument of commands and environment are now taken account
even if the command is used deep inside the AST.
- Latex.size type enhanced with more sizes

Latex library (smaller features):
* Latex.inferrule_ replaced by Latex.inferrule, which has many new options
- Latex.parbox
- Latex.hspace
- Latex.bot
- Latex.mathcal
- Latex.newline_size
- Latex.minipage
- Latex.center
- Latex.Verbatim.trim, trim_end and trim_begin (and Melt.Verbatim.trim)
- Latex.Verbatim.split_lines (and Melt.Verbatim.split_lines)
- Latex.listoffigures
- Latex.listoftables

Version 1.0.1
=============

- Melt compiles with Ocamlbuild 3.10.0 even with the main Makefile.
- All combinations of -no-mlpost or -no-ocamlbuild options should work.
You still have to add "-I +mlpost" yourself if you compiled Melt with Mlpost
but use the -no-mlpost option.
- The -no-mlpost option is set by default if Melt was compiled without Mlpost.