@@ -8,6 +8,8 @@ Configuration:
 
 Melt tool:
 - -classic-display option
+- Added the latop tool to parse LaTeX output and re-print it prettier and with
+less trash.
 
 Preprocessor:
 - \" in comments become " to stop the OCaml compiler from complaining about
